# donkeycar

./: LICENSE  README.md
ROS2/: camera_info.yaml  learner_robot.urdf.xacro  log6.txt  sample.txt  testOpenCV.py
ROS2/arduino/: imu.cpp  main.cpp  platformio.ini  sampleError.txt
ROS2/laptop/: EKF_example.py  EKF_example2.py  debug_lidar.py  debug_scan_commands.py  lidar_debugger_pi5.py  lidar_test.py  line_follower_controller.py  lowlevel_ros_lidar_check.py  plotIMU.py  ros2_to_orb_slam3.py  ros_bag_viewer.py  ros_dashboard.py  ros_dashboard2.py  ros_dashboard_lidar2.py  ros_dashboard_lidar_gem.py  ros_lidar_test.py
ROS2/laptop/lidar_slam/: exploration_manager.py  hardware_bridge.py  navigation_config.yaml  slam_nav_launch.py
ROS2/rasPi_Cpp/: CMakeLists.txt  arduino_ros_bridge_node.cpp  camera_stream_node.cpp  camera_stream_node.hpp  imu_6050_node.cpp  imu_6050_node.hpp  imu_bmi088_node.hpp  main.cpp  package.xml  rplidar_node.cpp  rplidar_node.hpp
ROS2/rasPi_Cpp/include/rpi_ros2_cpp_nodes/: arduino_ros_bridge_node.hpp  rplidar_node.hpp
ROS2/rasPi_Cpp/src/: arduino_ros_bridge_node.cpp  camera_stream_node.cpp  imu_bmi088_node.cpp  rplidar_node.cpp
ROS2/raspberryPi/: CMakeLists.txt  IMU_6050.cpp  IMU_6050.hpp  IMU_6050.py  MPC6050_test.py  arduino_ros_bridge.cpp  arduino_ros_bridge.hpp  arduino_ros_bridge.py  camerastream.cpp  camerastream.hpp  camerastream.py  main.cpp  main.py  package.xml  testEncoder.py
ROS2/scripts/: fruit_detector.sh  yolo_viewer.sh
ROS2/yolo_speaker/: .gitignore  package.xml  setup.cfg  setup.py
ROS2/yolo_speaker/yolo_speaker/: announce_node.py  debug_viewer_node.py
arduino/: IMU_SERIAL_MIKE_3.ino  MEKF.h
arduino/IMU_SERIAL_MIKE_3/: IMU_SERIAL_MIKE_3.ino  MEKF.cpp
donkeycar/management/: base.py
donkeycar/parts/: arduinoSerial.py  camera.py  imageSlider2.py  imu.py  line_follower2.py  line_follower3.py  line_follower5.py  mapper.py  mapper2.py  mapper3.py  plot.py  pose2.py  tub_v2.py
donkeycar/parts/web_controller/: line_follower2.py  web.py
donkeycar/templates/: complete.py  complete_old.py  cv_control.py
nn_car/: myconfig.py
pc_utility/: animation.py  control_wrapper.py  greenLineDetector.py  imageSlider2.py  image_HSV_tuner.py  line_follower2.py  line_follower3.py  myconfig.py  onlineGreen.py  self_tuning_contour_finder.py  self_tuning_try2.py  simulate_line_follower.py
personaplex_bridge/: CMakeLists.txt  README.md  package.xml
personaplex_bridge/include/personaplex_bridge/: personaplex_bridge_node.hpp
personaplex_bridge/launch/: personaplex_bridge.launch.py
personaplex_bridge/src/: main.cpp  personaplex_bridge_node.cpp
pid_car/: IMUmike.py  Remote_Voice_Program.py  calibrate.py  cameraCalibration.py  findCameraRotationMatrix.py  manage.py  myconfig.py  train.py  visualOdeometry1.py
pidog/: CMakeLists.txt  LAPTOP_VIEWING_GUIDE.md  README.md  launch_camera.sh  launch_pidog.sh  package.xml  test_camera_laptop.sh
pidog/include/pidog_camera/: camera_stream_node.hpp
pidog/include/pidog_ros/: audio_node.hpp  camera_node.hpp  imu_node.hpp  motion_node.hpp
pidog/launch/: pidog.launch.py
pidog/src/: audio_node.cpp  camera_node.cpp  camera_stream_node.cpp  imu_node.cpp  main.cpp  motion_node.cpp
pidog_control/: README.md  package.xml  setup.cfg  setup.py
pidog_control/pidog_control/: __init__.py  motion_node.py  pidog_dashboard.py
training/: .gitignore  README.md  dataset.yaml  predict.py  prepare_dataset.py  requirements.txt  train.py
