<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_speaker</name>
  <version>0.1.0</version>
  <description>Speaks detected class names via espeak-ng and shows the YOLO debug image.</description>
  <maintainer email="you@example.com">mdyesley</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>yolo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
